// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResultsItem should render a <ResultsItem /> 1`] = `
<a
  href="https://google.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "borderBottomWidth": 1,
      "borderColor": "#ddd",
      "borderLeftWidth": 1,
      "borderRightWidth": 1,
      "borderStyle": "solid",
      "borderTopWidth": 0,
      "boxSizing": "border-box",
      "color": "#000",
      "display": "block",
      "fontSize": 24,
      "height": 50,
      "lineHeight": "50px",
      "paddingLeft": 15,
      "paddingRight": 15,
      "textDecoration": "none",
    }
  }
>
  Google
</a>
`;

exports[`ResultsItem should render a highlighted <ResultsItem /> 1`] = `
<a
  href="https://google.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "backgroundColor": "#eee",
      "borderBottomWidth": 1,
      "borderColor": "#ddd",
      "borderLeftWidth": 1,
      "borderRightWidth": 1,
      "borderStyle": "solid",
      "borderTopWidth": 0,
      "boxSizing": "border-box",
      "color": "#000",
      "display": "block",
      "fontSize": 24,
      "height": 50,
      "lineHeight": "50px",
      "paddingLeft": 15,
      "paddingRight": 15,
      "textDecoration": "none",
    }
  }
>
  Google
</a>
`;
